--- a/lib/jq-front.rc
+++ b/lib/jq-front.rc
@@ -1,3 +1,8 @@
+function _debug_abort() {
+  print_stacktrace "DEBUG: error trapped"
+  exit 1
+}
+
 function _mangle_path() {
   local _path="${1}" _path_base="${2}"
   local _ret=""
@@ -23,14 +28,9 @@ function _mangle_path() {
   echo "${_path_base}:${_ret}"
 }
 
-readonly JF_BASEDIR=$(dirname "$(readlink --canonicalize "${0}")")
 readonly _JF_CWD="${JF_CWD:-"$(pwd)"}"
-readonly _JF_BASEDIR="${JF_BASEDIR}"
 readonly _JF_PATH_BASE=${JF_PATH_BASE:-""}
 readonly _JF_PATH=$(_mangle_path "${JF_PATH:-"."}" "${_JF_PATH_BASE}")
-readonly _JF_TEMPLATING_ENABLED=${JF_TEMPLATING_ENABLED:-"yes"}
-readonly _JF_NESTED_TEMPLATING_LEVELS=5
-readonly _JF_VALIDATION=${JF_VALIDATION:-"no"}
 readonly _JF_INFO=${JF_INFO:-"disabled"}
 readonly _JF_DEBUG=${JF_DEBUG:-"disabled"}
 readonly _JF_PERF=${JF_PERF:-"${_JF_DEBUG}"}
@@ -47,4 +47,3 @@ export TMPDIR="${_JF_SESSION_DIR}"
 if [[ -n "${_JF_PATH_BASE}" ]]; then
   export TMPDIR="${_JF_PATH_BASE}/${TMPDIR}"
 fi
-export JF_BASEDIR
