Fix a failing test Improve test runner so that it can define 'unexpected' output (Try to) Improve performance by giving '-M' option, which monochromize output, to jq.

--- a/lib/jq-front.rc
+++ b/lib/jq-front.rc
@@ -47,3 +47,5 @@ export TMPDIR="${_JF_SESSION_DIR}"
 if [[ -n "${_JF_PATH_BASE}" ]]; then
   export TMPDIR="${_JF_PATH_BASE}/${TMPDIR}"
 fi
+
+alias jq='jq -M'
