--- a/lib/jq-front.rc
+++ b/lib/jq-front.rc
@@ -1,15 +1,14 @@
-function expand_processor() {
-  local _processor_name="${1}" _target_file="${2}"
-  local _ret="${_processor_name}"
-  local _bash="bash -eu"
-  if [[ "${_processor_name}" == BASH ]]; then
-    _ret="${_bash}"
-  elif [[ "${_processor_name}" == DEFAULT ]]; then
-    if [[ "${_target_file}" == *.sh ]]; then
-    _ret="${_bash}"
-    fi
+function resolve_processor() {
+  local _absfile="${1}"
+  local _processor=""
+  if is_localnode "${_absfile}" || [[ ${_absfile} == *.json ]]; then
+    _processor="jq ."
+  elif [[ "${_absfile}" == *.yaml || "${_absfile}" == *.yml ]]; then
+    _processor="yaml2json"
+  elif [[ "${_absfile}" == *.sh ]]; then
+    _processor="bash -eu"
   fi
-  echo "${_ret}"
+  echo "${_processor}"
 }
 
 function _debug_abort() {
@@ -49,7 +48,7 @@ readonly _JF_INFO=${JF_INFO:-"disabled"}
 readonly _JF_DEBUG=${JF_DEBUG:-"disabled"}
 readonly _JF_PERF=${JF_PERF:-"${_JF_DEBUG}"}
 readonly _JF_SESSION_ID="$(date +%s.%N)"
-readonly _JF_SESSION_DIR="/tmp/.jq-front-${_JF_SESSION_ID}"
+readonly _JF_SESSION_DIR="${TMPDIR:-/tmp}/.jq-front-${_JF_SESSION_ID}"
 
 if [[ ${_JF_DEBUG} == enabled ]]; then
   trap _debug_abort ERR
