Fix a bug where a file without .json extension is not processed and an error is raised.

--- a/lib/jq-front.rc
+++ b/lib/jq-front.rc
@@ -1,6 +1,6 @@
 function resolve_processor() {
   local _absfile="${1}"
-  local _processor=""
+  local _processor="jq ."
   if is_localnode "${_absfile}" || [[ ${_absfile} == *.json ]]; then
     _processor="jq ."
   elif [[ "${_absfile}" == *.yaml || "${_absfile}" == *.yml ]]; then
