Fix temporary directory handling

--- a/lib/jq-front.rc
+++ b/lib/jq-front.rc
@@ -41,6 +41,10 @@ function _mangle_path() {
   echo "${_path_base}:${_ret}"
 }
 
+function __jqfront__abort_jq_front() {
+  abort "SIGINT TRAPPED!!!!"
+}
+
 readonly _JF_CWD="${JF_CWD:-"$(pwd)"}"
 readonly _JF_PATH_BASE=${JF_PATH_BASE:-""}
 readonly _JF_PATH=$(_mangle_path "${JF_PATH:-"."}" "${_JF_PATH_BASE}")
@@ -48,12 +52,6 @@ readonly _JF_INFO=${JF_INFO:-"disabled"}
 readonly _JF_DEBUG=${JF_DEBUG:-"disabled"}
 readonly _JF_PERF=${JF_PERF:-"${_JF_DEBUG}"}
 readonly _JF_SESSION_ID="$(date +%s.%N)"
-readonly _JF_TMPDIR="${TMPDIR:-/tmp}/.jq-front"
-readonly _JF_SESSION_DIR="${_JF_TMPDIR}/session-${_JF_SESSION_ID}"
-
-function __jqfront__abort_jq_front() {
-  abort "SIGINT TRAPPED!!!!"
-}
 
 trap __jqfront__abort_jq_front SIGINT
 
@@ -61,12 +59,18 @@ if [[ ${_JF_DEBUG} == enabled ]]; then
   trap _debug_abort ERR
 fi
 
+readonly _JF_TMPDIR="${TMPDIR:-/tmp}/.jq-front"
 export TMPDIR="${_JF_TMPDIR}"
-export _JF_TMPDIR
+[[ ! -e "$TMPDIR" ]] && mkdir -p "${TMPDIR}"
+
 ####
 # Export JF_PATH_BASE, which is set for executions under Docker
-if [[ -n "${_JF_PATH_BASE}" ]]; then
+if [[ -n "${JF_PATH_BASE:+x}" ]]; then
   export TMPDIR="${_JF_PATH_BASE}${TMPDIR}"
+  [[ -e "${TMPDIR}" ]] || mkdir -p "$TMPDIR"
 fi
+
+readonly _JF_SESSION_DIR="${_JF_TMPDIR}/session-${_JF_SESSION_ID}"
+export _JF_TMPDIR
 
 alias jq='jq -M'
